# home-lab

./: .ansible-lint  .gitignore  .gitmodules  README.md  ansible.cfg  inventory.yml.example  secret_vars.yml.example  site.yml  spec.md  vault.yml.example
apps/_cpp_skeleton/: .dockerignore  .gitignore  CMakeLists.txt  k8s.yml.j2
apps/postgres/: install.yml  namespace.yml.j2
group_vars/: all.yml.example
infrastructure/k3s/: main.yml
infrastructure/postgres/: install.yml  secret.yml.j2  service.yml.j2  statefulset.yml.j2
infrastructure/registry/: main.yml
infrastructure/templates/: registries.yml.j2
playbooks/: deploy_app.yml  deploy_app_tasks.yml  deploy_apps_tasks.yml  k3s_install.yml  pn50_power_limits.yml  registry_setup.yml
playbooks/templates/: registries.yml.j2  ryzenadj.service.j2
skeletons/_cpp/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  app_vars.yml  k8s.yml.j2  main.cpp  vault.yml.example
